docs: add documentation for list all opening handler
