# docs/swagger.yaml
@@ -90,4 +90,20 @@ paths:
             $ref: '#/definitions/handler.ErrorReponse'
       tags:
       - Openings
+  /openings:
+    get:
+      consumes:
+      - application/json
+      description: List all jobs openings
+      responses:
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorReponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorReponse'
+      tags:
+      - Openings
 swagger: "2.0"
